# adventure

./: Cargo.toml
.github/workflows/: rust.yml
adventure/: Cargo.toml  samplegame.yaml
adventure/src/: lib.rs
adventure/src/driver/: console.rs  mod.rs  text.rs
adventure/src/game/: action.rs  cache.rs  location.rs  mod.rs  progress.rs  scene.rs  test.rs
tree-sitter-adventure/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.adventure  tree-sitter.json
tree-sitter-adventure/bindings/c/: tree-sitter-adventure.h  tree-sitter-adventure.pc.in
tree-sitter-adventure/bindings/go/: binding.go  binding_test.go
tree-sitter-adventure/bindings/node/: binding.cc  index.js
tree-sitter-adventure/bindings/python/tests/: test_binding.py
tree-sitter-adventure/bindings/python/tree_sitter_adventure/: __init__.py  binding.c
tree-sitter-adventure/bindings/rust/: build.rs  lib.rs
tree-sitter-adventure/bindings/swift/TreeSitterAdventureTests/: TreeSitterAdventureTests.swift
tree-sitter-adventure/src/: grammar.json  node-types.json  parser.c
