[package]
name = "tree-sitter-adventure"
description = "A DSL for writing choose-your-own-adventure games"
version = "0.0.1"
authors = ["Ben C. Forsberg <benfrsbrg@gmail.com>"]
license = "All rights reserved"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "adventure"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/unquabain/adventure/tree-sitter-adventure"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
