[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-adventure"
description = "A DSL for writing choose-your-own-adventure games"
version = "0.0.1"
keywords = ["incremental", "parsing", "tree-sitter", "adventure"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Ben C. Forsberg", email = "benfrsbrg@gmail.com" }]
requires-python = ">=3.9"
license.text = "All rights reserved"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/unquabain/adventure/tree-sitter-adventure"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
